--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home page</title>
+    <title>{% block title %}Home page{% endblock %}</title>
+    <!-- add icon link -->
+    <link rel = "icon" href ="{% static 'images/title icon.png' %}" type = "image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
@@ -21,6 +23,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="{% url 'about' %}">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="{% url 'register' %}">Register</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="{% url 'login' %}">Login</a>
@@ -179,6 +184,9 @@
             </p>
             <p>
               <a style="color: inherit" href="#!">About</a>
+            </p>
+            <p>
+              <a style="color: inherit" href="#!">About us</a>
             </p>
           </div>
           <!-- Grid column -->
