--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,12 +13,13 @@
             <h5>LOGIN TO YOUR ACCOUNT</h5>
         </div>
         <div class="mt-4">
-            <form>
+            <form action="{% url 'login_check' %}" method="post">
+                {% csrf_token %}
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Username">
+                    <input class="form-control" name="username" type="text" placeholder="Username">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Password">
+                    <input class="form-control" name="password" type="password" placeholder="Password">
                 </div>
                 <div class="form-group">
                     <input type="radio" name="user" value="student">Student</input>
