--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -6,7 +6,20 @@
     <h3 class="ml-5">REGISTRATION</h3>
 </div>
 <div class="container p-3">
-    <form action="" method="post">
+    {% if messages %}
+        {% for message in messages %}
+        {% if message.tags %}
+        <div class="alert alert-{{ messages.tags }} alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+        </div>
+
+        {% endif %}
+        {% endfor %}
+    {% endif %}
+    <form id="RegisterForm" action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div id="userSelectRadio">
             <label for="User">Select User</label>
@@ -52,6 +65,8 @@
       <button type="submit" class="btn btn-primary btn-block">Register</button>
     </form>
 </div>
+
+
 
 
 {% endblock %}
