--- a/app/templates/common_dashboard.html
+++ b/app/templates/common_dashboard.html
@@ -7,6 +7,7 @@
     <!-- add icon link -->
     <link rel = "icon" href ="{% static 'images/title icon.png' %}" type = "image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
                 <a class="nav-link text-white" href="#">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">My Account</a>
+                <a class="nav-link text-white" href="{% url 'my_account' %}">My Account</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="{% url 'logout' %}">Log out</a>
