created new model for questions and added the link to add question; created the template to add question

--- a/app/templates/teacher_dashboard.html
+++ b/app/templates/teacher_dashboard.html
@@ -24,9 +24,9 @@
             <div class="card text-center" style="width: max; margin: 1em; color: #008080">
               <i class="fa fa-graduation-cap fa-5x mt-2"></i>
               <div class="card-body">
-                <h5 class="card-title">Add Exam</h5>
-                <p class="card-text">Click the below link to add a new exam</p>
-                <a href="#" class="btn btn-primary">Click here</a>
+                <h5 class="card-title">Add Question</h5>
+                <p class="card-text">Click the below link to add questions</p>
+                <a href="{% url 'add_question' %}" class="btn btn-primary">Click here</a>
               </div>
             </div>
         </div>
