--- a/app/templates/common_dashboard.html
+++ b/app/templates/common_dashboard.html
@@ -26,7 +26,7 @@
                 <a class="nav-link text-white" href="{% url 'about' %}">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Dashboard</a>
+                <a class="nav-link text-white" href="{% url 'dashboard' %}">Dashboard</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="{% url 'my_account' %}">My Account</a>
