--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,7 +29,7 @@
                 <a class="nav-link text-white" href="{% url 'dashboard' %}">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">My Account</a>
+                <a class="nav-link text-white" href="{% url 'my_account' %}">My Account</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="{% url 'logout' %}">Log out</a>
