--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -24,11 +24,11 @@
         <div id="userSelectRadio">
             <label for="User">Select User</label>
             <div class="form-check form-check-inline" id="User">
-              <input class="form-check-input" onclick="document.getElementById('inputEmail2').disabled = true; document.getElementById('inputStandard4').disabled = false" type="radio" name="SelectUser" id="student" value="student">
+              <input class="form-check-input" type="radio" name="SelectUser" id="student" value="student">
               <label class="form-check-label" for="student">Student</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" onclick="document.getElementById('inputStandard4').disabled = true; document.getElementById('inputEmail2').disabled = false" type="radio" name="SelectUser" id="teacher" value="teacher">
+              <input class="form-check-input" type="radio" name="SelectUser" id="teacher" value="teacher">
               <label class="form-check-label" for="teacher">Teacher</label>
             </div>
         </div>
@@ -36,10 +36,6 @@
         <div class="form-group col-md-8">
           <label for="inputName4">Name</label>
           <input type="text" class="form-control" name="name" id="inputName4" placeholder="Enter your name">
-        </div>
-        <div class="form-group col-md-4">
-          <label for="inputStandard4">Class</label>
-          <input type="number" class="form-control" name="standard" id="inputStandard4" max="10" min="1">
         </div>
       </div>
       <div class="form-group">
