--- a/app/templates/exam.html
+++ b/app/templates/exam.html
@@ -6,16 +6,38 @@
     <div class="bg-light w-100 p-3 mt-3">
         <h3 class="ml-5 text-info">Exam</h3>
     </div>
-    <form>
+
+    <!--alert for attending exam twice-->
+    {% if messages %}
+        {% for message in messages %}
+        {% if message.tags %}
+        <div class="alert alert-{{ messages.tags }} alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+        </div>
+
+        {% endif %}
+        {% endfor %}
+    {% endif %}
+
+
+    <form class="p-4" method="post" action="{% url 'check_answers' %}">
+        {% csrf_token %}
         {% for question in questions %}
         <div class="p-4">
             <p>{{forloop.counter}}. {{question.question}}</p>
-            <input type="radio" value="{{question.option1}}">{{question.option1}}</input><br>
-            <input type="radio" value="{{question.option2}}">{{question.option2}}</input><br>
-            <input type="radio" value="{{question.option3}}">{{question.option3}}</input><br>
-            <input type="radio" value="{{question.option4}}">{{question.option4}}</input><br>
+            <input type="radio" name="{{question.id}}option" value="{{question.option1}}">{{question.option1}}</input><br>
+            <input type="radio" name="{{question.id}}option" value="{{question.option2}}">{{question.option2}}</input><br>
+            <input type="radio" name="{{question.id}}option" value="{{question.option3}}">{{question.option3}}</input><br>
+            <input type="radio" name="{{question.id}}option" value="{{question.option4}}">{{question.option4}}</input><br>
+            <input type="hidden" name="{{question.id}}correct" value="{{question.correct_answer}}">
         </div>
         {% endfor %}
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
     </form>
 </div>
 {% endblock %}
