--- a/app/templates/student_dashboard.html
+++ b/app/templates/student_dashboard.html
@@ -23,7 +23,7 @@
               <div class="card-body">
                 <h5 class="card-title">Results</h5>
                 <p class="card-text">Click the below link to see your results</p>
-                <a href="#" class="btn btn-primary">Click here</a>
+                <a href="{% url 'my_results' %}" class="btn btn-primary">Click here</a>
               </div>
             </div>
         </div>
