--- a/app/templates/teacher_dashboard.html
+++ b/app/templates/teacher_dashboard.html
@@ -54,7 +54,7 @@
               <div class="card-body">
                 <h5 class="card-title">Results</h5>
                 <p class="card-text">Click the below link to see the results of the exams attended</p>
-                <a href="#" class="btn btn-primary">Click here</a>
+                <a href="{% url 'all_results' %}" class="btn btn-primary">Click here</a>
               </div>
             </div>
         </div>
