--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,6 +7,20 @@
     <h3 class="ml-5">LOGIN</h3>
 </div>
 
+{% if messages %}
+        {% for message in messages %}
+        {% if message.tags %}
+        <div class="alert alert-{{ messages.tags }} alert-dismissible bg-danger" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message }}
+        </div>
+
+        {% endif %}
+        {% endfor %}
+    {% endif %}
+
 <div class="container">
     <section class="text-center mt-4" style="margin-left: auto; margin-right: auto; width: 30em; height: 20em;">
         <div class="heading bg-secondary p-2 text-white">
